# Eva

./: .gitignore  Cargo.toml  README.md
prototypes/: EsmLexer.g4  EsmParser.g4
src/: lib.rs
src/core/: mod.rs  opcode.rs  struct_layout.rs
src/emit/: encode.rs  mod.rs  monomorph.rs  op_exprs.rs  struct_util.rs  var_helper.rs
src/vm/: dispatch.rs  mod.rs  structures.rs
src/vm/dispatch/: util.rs
src/vm/structures/: decode.rs  func_call.rs  header.rs  registers.rs  strings.rs
